# language-docker

./: .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  circle.yml  devenv.nix  hadolint.cabal  language-docker.cabal  language-dockerfile.cabal  language-dockerfile.dockerfile  language-dockerfile.dockerfile.hs  package.yaml  stack-gh-pages  stack-old.yaml  stack.yaml  test.py
.github/workflows/: haskell.yml  hlint.yml
examples/: complex.hs  edsl-quasi.hs  edsl.hs  parse-string.hs  parse.hs  pretty-print.hs  templating-7.10.dockerfile  templating-7.8.dockerfile  templating-8.dockerfile  templating.hs  test-dockerfile.dockerfile  test-dockerfile.hs
integration-tests/: .gitignore  parseFile.hs  parse_files.sh
src/: Lexer.hs  Main.hs  Normalize.hs  Parser.hs  PrettyPrint.hs  Rules.hs  Syntax.hs
src/Language/: Docker.hs  Dockerfile.hs
src/Language/Docker/: EDSL.hs  Lexer.hs  Normalize.hs  Parser.hs  Predef.hs  PrettyPrint.hs  Syntax.hs
src/Language/Docker/EDSL/: Plugins.hs  Quasi.hs  Types.hs
src/Language/Docker/Parser/: Arguments.hs  Cmd.hs  Copy.hs  Expose.hs  From.hs  Healthcheck.hs  Instruction.hs  Pairs.hs  Prelude.hs  Run.hs
src/Language/Docker/Syntax/: Lift.hs  Port.hs  PortRange.hs  Protocol.hs
src/Language/Dockerfile/: Bash.hs  EDSL.hs  FormatCheck.hs  Formatter.hs  Lexer.hs  Normalize.hs  Parser.hs  Predef.hs  PrettyPrint.hs  Rules.hs  Syntax.hs
src/Language/Dockerfile/EDSL/: Plugins.hs  Quasi.hs  Types.hs
src/Language/Dockerfile/Syntax/: Lift.hs
test/: Test.hs  TestHelper.hs
test/Language/Docker/: EDSLSpec.hs  ExamplesSpec.hs  IntegrationSpec.hs  ParseAddSpec.hs  ParseCmdSpec.hs  ParseCopySpec.hs  ParseEnvSpec.hs  ParseExposeSpec.hs  ParseHealthcheckSpec.hs  ParseLabelSpec.hs  ParsePragmaSpec.hs  ParseRunSpec.hs  ParserSpec.hs  PrettyPrintSpec.hs
test/Language/Docker/EDSL/: PluginsSpec.hs  QuasiSpec.hs
test/Language/Dockerfile/: EDSLSpec.hs  ExamplesSpec.hs  ParserSpec.hs
test/Language/Dockerfile/EDSL/: PluginsSpec.hs  QuasiSpec.hs
test/fixtures/: 1.Dockerfile  2.Dockerfile  3.Dockerfile  4.Dockerfile  5.Dockerfile  6.Dockerfile  7.Dockerfile  8.Dockerfile  Dockerfile.bom.utf16be  Dockerfile.bom.utf16le  Dockerfile.bom.utf32be  Dockerfile.bom.utf32le  Dockerfile.bom.utf8
