name:                language-dockerfile
version:             1.0.0.0
synopsis:            Dockerfile linter, parser and pretty-printer, forked from hadolint
homepage:            https://github.com/beijaflor-io/language-dockerfile
license:             OtherLicense
license-file:        LICENSE
author:              Lukas Martinelli, Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           Lukas Martinelli, Copyright (c) 2016 Pedro Tacla Yamada
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  build-depends:       ShellCheck
                     , base >=4.8
                     , bytestring >=0.10
                     , free
                     , mtl
                     , parsec >=3.1
                     , pretty
                     , split >= 0.2
                     , template-haskell
                     , th-lift
                     , th-lift-instances
  exposed-modules: Language.Dockerfile
                 , Language.Dockerfile.Parser
                 , Language.Dockerfile.PrettyPrint
                 , Language.Dockerfile.Normalize
                 , Language.Dockerfile.Rules
                 , Language.Dockerfile.Syntax
                 , Language.Dockerfile.Lexer
                 , Language.Dockerfile.Bash
                 , Language.Dockerfile.FormatCheck

                 , Language.Dockerfile.Syntax.Lift
                 , Language.Dockerfile.EDSL
                 , Language.Dockerfile.EDSL.Quasi
                 , Language.Dockerfile.EDSL.Types
  default-language:    Haskell2010

executable hadolint
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.8
                     , parsec >=3.1
                     , bytestring >=0.10
                     , split >= 0.2
                     , ShellCheck
                     , pretty
  default-language:    Haskell2010
  other-modules: Language.Dockerfile
                 , Language.Dockerfile.Parser
                 , Language.Dockerfile.PrettyPrint
                 , Language.Dockerfile.Normalize
                 , Language.Dockerfile.Rules
                 , Language.Dockerfile.Syntax
                 , Language.Dockerfile.Bash
                 , Language.Dockerfile.Lexer
                 , Language.Dockerfile.FormatCheck

executable dockerfmt
  hs-source-dirs:      bin
  main-is:             DockerFmt.hs
  build-depends:       base >=4.8
                     , parsec >=3.1
                     , bytestring >=0.10
                     , split >= 0.2
                     , ShellCheck
                     , pretty
                     , language-dockerfile
  default-language:    Haskell2010

test-suite hadolint-unit-tests
  hs-source-dirs:      src
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       HUnit >= 1.2,
                       ShellCheck,
                       base >= 4.8,
                       bytestring >=0.10,
                       parsec >=3.1,
                       pretty,
                       split >= 0.2,
                       test-framework,
                       test-framework-hunit,
                       th-lift
  default-language:    Haskell2010

  other-modules: Language.Dockerfile
                 , Language.Dockerfile.Parser
                 , Language.Dockerfile.PrettyPrint
                 , Language.Dockerfile.Normalize
                 , Language.Dockerfile.Rules
                 , Language.Dockerfile.Syntax
                 , Language.Dockerfile.Bash
                 , Language.Dockerfile.Lexer
                 , Language.Dockerfile.FormatCheck

test-suite hspec
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  other-modules: Language.Dockerfile.EDSLSpec
  build-depends: base
               , hspec
               , QuickCheck
               , language-dockerfile
  hs-source-dirs: test
  default-language: Haskell2010
